...

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_zoom_neighbour" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:scaleType="center"
        android:backgroundTint="#FCFCFC"
        app:borderWidth="0dp"
...
